crates/oxc_react_compiler/tests/snapshots/memoize-tagged-template-before-consumer.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/memoize-tagged-template-before-consumer.tsx
---
// @compilationMode:"infer" @panicThreshold:"none"
export function Component({ tag, consume }) {
	return consume(tag`value`);
}
