crates/oxc_react_compiler/tests/snapshots/memoize-value-block-value-sequence.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/memoize-value-block-value-sequence.js
---
import { c as _c } from "react/compiler-runtime";
function Foo(props) {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = [], null;
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
