crates/oxc_react_compiler/tests/snapshots/merge-consecutive-nested-scopes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/merge-consecutive-nested-scopes.js
---
import { c as _c } from "react/compiler-runtime";
const { getNumber } = require("shared-runtime");
function Component(props) {
	const $ = _c(1);
	let x;
	if (props.cond) {
		let t0;
		if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
			t0 = { session_id: getNumber() };
			$[0] = t0;
		} else {
			t0 = $[0];
		}
		x = t0;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ cond: true }]
};
