crates/oxc_react_compiler/tests/snapshots/merge-consecutive-scopes-no-deps.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/merge-consecutive-scopes-no-deps.js
---
import { c as _c } from "react/compiler-runtime";
const { getNumber } = require("shared-runtime");
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = { session_id: getNumber() };
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
