crates/oxc_react_compiler/tests/snapshots/merge-nested-scopes-with-same-inputs.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/merge-nested-scopes-with-same-inputs.js
---
import { c as _c } from "react/compiler-runtime";
import { setProperty } from "shared-runtime";
function Component(props) {
	const $ = _c(2);
	let y;
	if ($[0] !== props.a) {
		y = {};
		const x = {};
		setProperty(x, props.a);
		y.a = props.a;
		y.x = x;
		$[0] = props.a;
		$[1] = y;
	} else {
		y = $[1];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: 42 }]
};
